crates/pcb-zen/tests/snapshots/load_diagnostics__snapshot_nested_load_errors.snap
---
source: crates/pcb-zen/tests/load_diagnostics.rs
expression: snapshot_output
---
Error: Variable `undefined_variable` not found
   ╭─[ [TEMP_DIR]level3.zen:3:1 ]
   │
 3 │ undefined_variable + 1
   │ ─────────┬────────  
   │          ╰────────── Variable `undefined_variable` not found
   │
   ├─[ [TEMP_DIR]test.zen:3:6 ]
   │
 3 │ load("./level1.zen", "something")
   │      ───────┬──────  
   │             ╰──────── Error loading module `./level1.zen`
   │
   ├─[ [TEMP_DIR]level1.zen:3:6 ]
   │
 3 │ load("./level2.zen", "something")
   │      ───────┬──────  
   │             ╰──────── Error loading module `./level2.zen`
   │
   ├─[ [TEMP_DIR]level2.zen:3:6 ]
   │
 3 │ load("./level3.zen", "something")
   │      ───────┬──────  
   │             ╰──────── Error loading module `./level3.zen`
───╯
